<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_margin="10dp"
        android:hint="Enter City Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_name"
            android:backgroundTint="#cdd2d4"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/city_name_text_input">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:backgroundTint="#1d86a1"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"
            android:text="Search" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="180dp">
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/weather_status"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="100dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/temp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"/>
                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/temp_feel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feel_temp"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/city_name"/>
            <TextView
                android:id="@+id/time_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="@string/time_date"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Sunrise"/>
                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/sunrise"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Sunset"/>
                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/sunset"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Wind"/>
                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/wind"/>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Pressure"/>
                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/pressure"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Humidity"/>
                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/humidity"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        android:tint="#FFFFFF"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Created By"/>
                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/developer_name"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>




    <!--&lt;!&ndash;<EditText
         android:id="@+id/text1"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:hint="Enter City Name/Zip Code"
         android:gravity="center"/>

     <Button
         android:id="@+id/btn"
         android:layout_width="200dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="50dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Search" />
     <TextView
         android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Hello World!"
         android:gravity="center"
         android:textSize="25sp"
         android:layout_marginTop="120dp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="160dp">
         <TextView
             android:id="@+id/temp"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:text="19"
             android:gravity="center"
             android:textSize="120sp"
             android:layout_centerHorizontal="true"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:text="°C"
             android:textStyle="bold"
             android:textSize="25sp"
             android:paddingTop="55dp"
             android:layout_toRightOf="@+id/temp"
             />&ndash;&gt;

     </RelativeLayout>-->
</RelativeLayout>